[package]
name = "cumulus-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "bkchr-cumulus-branch", default-features = false }

# Other dependencies
impl-trait-for-tuples = "0.1.3"

# Polkadot dependencies
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "bkchr-cumulus-branch", default-features = false }

[features]
default = [ "std" ]
std = [
	"sp-inherents/std",
	"polkadot-core-primitives/std",
]
