[package]
name = "cumulus-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "bkchr-start-cumulus" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "bkchr-start-cumulus" }

# Other dependencies
codec = { package = "parity-scale-codec", version = "1.0.5", default-features = false, features = [ "derive" ] }
impl-trait-for-tuples = "0.1.3"

# Polkadot dependencies
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "bkchr-start-cumulus" }

[features]
default = [ "std" ]
std = [
	"sp-std/std",
	"codec/std",
	"polkadot-primitives/std",
	"polkadot-parachain/std",
	"sp-inherents/std",
	"polkadot-core-primitives/std",
	"sp-runtime/std",
]
