[package]
name = "rococo-collator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "rococo-collator"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
exit-future = "0.1.4"
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
parking_lot = "0.9.0"
trie-root = "0.15.2"
codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.3"
serde = { version = "1.0.101", features = ["derive"] }
hex-literal = "0.2.1"

# Parachain dependencies
parachain-runtime = { package = "cumulus-test-parachain-runtime", path = "runtime" }
shell-runtime = { package = "cumulus-shell-runtime", path = "shell-runtime" }
rococo-parachain-primitives = { path = "primitives" }

# Substrate dependencies
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "apopiak-xcm-origin" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }

# RPC related dependencies
jsonrpc-core = "15.1.0"

# Cumulus dependencies
cumulus-client-cli = { path = "../client/cli" }
cumulus-client-consensus-relay-chain = { path = "../client/consensus/relay-chain" }
cumulus-client-collator = { path = "../client/collator" }
cumulus-client-service = { path = "../client/service" }
cumulus-client-network = { path = "../client/network" }
cumulus-primitives-core = { path = "../primitives/core" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "apopiak-xcm-origin" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "apopiak-xcm-origin" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "apopiak-xcm-origin" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "apopiak-xcm-origin" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
rand = "0.7.3"
tempfile = "3.2.0"
tokio = { version = "0.2.13", features = ["macros"] }

# Polkadot dependencies
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "apopiak-xcm-origin" }
polkadot-test-runtime = { git = "https://github.com/paritytech/polkadot", branch = "apopiak-xcm-origin" }
polkadot-test-client = { git = "https://github.com/paritytech/polkadot", branch = "apopiak-xcm-origin" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "apopiak-xcm-origin" }

# Substrate dependencies
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "apopiak-xcm-origin" }
