[package]
name = "cumulus-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Other dependencies
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = [ "derive" ] }
memory-db = { version = "0.24.0", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
trie-db = { version = "0.22.0", default-features = false }

# Cumulus dependencies
cumulus-primitives = { path = "../primitives", default-features = false }

# Substrate dependencies
sp-std = { git = "https://github.com/cheme/substrate", default-features = false, branch = "rococo-branch-witness_backend" }
sp-runtime = { git = "https://github.com/cheme/substrate", default-features = false, branch = "rococo-branch-witness_backend" }
sp-core = { git = "https://github.com/cheme/substrate", default-features = false, branch = "rococo-branch-witness_backend" }
sp-io = { git = "https://github.com/cheme/substrate", default-features = false, branch = "rococo-branch-witness_backend" }
frame-executive = { git = "https://github.com/cheme/substrate", default-features = false, branch = "rococo-branch-witness_backend" }
sp-state-machine = { git = "https://github.com/cheme/substrate", default-features = false, branch = "rococo-branch-witness_backend" }
sp-externalities = { git = "https://github.com/cheme/substrate", default-features = false, branch = "rococo-branch-witness_backend" }
sp-trie = { git = "https://github.com/cheme/substrate", default-features = false, branch = "rococo-branch-witness_backend" }

# Polkadot dependencies
parachain = { package = "polkadot-parachain", git = "https://github.com/cheme/polkadot-1", branch = "rococo-branch-witness_backend", default-features = false, features = [ "wasm-api" ] }

[dev-dependencies]
sc-block-builder = { git = "https://github.com/cheme/substrate", default-features = false, branch = "rococo-branch-witness_backend" }
sp-keyring = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sp-blockchain = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
sc-executor = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend", features = ["std", "wasmtime"] }
sp-consensus = { git = "https://github.com/cheme/substrate", branch = "rococo-branch-witness_backend" }
test-client = { package = "cumulus-test-client", path = "../test/client" }

[features]
default = ["std"]
std = [
	"codec/std",
	"cumulus-primitives/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-executive/std",
	"memory-db/std",
	"hash-db/std",
	"trie-db/std",
	"sp-state-machine/std",
	"sp-externalities/std",
	"sp-trie/std",
	"parachain/std",
]
